# heyfocus

./: .gitignore  FEATURES.md  README.ko.md  README.md  index.html  package.json  tailwind.config.js
remotion/: package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx  Video.tsx  app-styles.css  styles.ts
remotion/src/animations/: transitions.ts  typing.ts
remotion/src/components/: AppWindow.tsx  Cursor.tsx
remotion/src/sequences/: Act1-Start.tsx  Act2-Focus.tsx  Act3-Concentrate.tsx  Act4-Review.tsx  Act5-Outro.tsx
remotion/src/store/: mockStore.tsx
scripts/: setup-mock-data.cjs
src/: App.tsx  index.css  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Toast.tsx
src/components/log/: LogOverlay.tsx  LogWindow.tsx
src/components/sections/: ActiveSection.tsx  AddTaskForm.tsx  Header.tsx  LaterSection.tsx
src/components/stats/: ActivityHeatmap.tsx  DailyScoreCard.tsx  FocusDonut.tsx  FocusTimeline.tsx  SlotUtilization.tsx  StatsWindow.tsx  SwitchFrequency.tsx
src/components/task/: TaskItem.tsx  TaskList.tsx
src/components/ui/: IconButton.tsx  Icons.tsx  SlotIndicator.tsx
src/hooks/: useKeyboardShortcuts.ts  useWindowFocus.ts  useWindowResize.ts
src/lib/: broadcast.ts  chartUtils.ts  mockData.ts  tauri.ts  utils.ts
src/store/: useAppStore.ts
src/types/: index.ts
